Actions
Bug #6761
closedfcinfo hba-port doesn't get correct supported speeds and connection speed for 16Gb target ports
Start date:
2016-03-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
In target mode, 16G speeds are not show correctly:
# fcinfo hba-port HBA Port WWN: 10000090fa533c5d Port Mode: Target Port ID: ef OS Device Name: Not Applicable Manufacturer: Emulex Model: LPe16002B-M6 Firmware Version: 1.1.43.3 (xe201.grp) FCode/BIOS Version: none Serial Number: FC34995722 Driver Name: emlxs Driver Version: 2.80.8.0 (2012.09.17.15.45) Type: point-to-point State: online Supported Speeds: 4Gb 8Gb Current Speed: not established Node WWN: 20000090fa533c5d
Updated by Electric Monk over 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit e4dcf6b386220918d8a355e951a2d7e8a73e5a6d
commit e4dcf6b386220918d8a355e951a2d7e8a73e5a6d Author: Tony Nguyen <tony.nguyen@nexenta.com> Date: 2016-03-30T13:14:56.000Z 6761 fcinfo hba-port doesn't get correct supported speeds and connection speed for 16Gb target ports Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Steve Peng <steve.peng@nexenta.com> Reviewed by: Rob Gittins <rob.gittins@nexenta.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com>
Actions