6761 fcinfo hba-port doesn't get correct supported speeds and connection speed for 16Gb target ports Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Steve Peng <steve.peng@nexenta.com> Reviewed by: Rob Gittins <rob.gittins@nexenta.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com>