usr/src/uts/common/sys/fct.h
@@ -20,7 +20,7 @@
  */
 /*
  * Copyright (c) 2008, 2010, Oracle and/or its affiliates. All rights reserved.
- * Copyright 2012 Nexenta Systems, Inc. All rights reserved.
+ * Copyright 2016 Nexenta Systems, Inc. All rights reserved.
  */
 #ifndef	_FCT_H
 #define	_FCT_H
@@ -336,6 +336,7 @@ typedef struct fct_port_stat {
 #define	PORT_SPEED_4G			4
 #define	PORT_SPEED_8G			8
 #define	PORT_SPEED_10G			16
+#define	PORT_SPEED_16G			32
 
 /*
  * Abort commands
